--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -18,3 +18,6 @@ block content
   form(action="/api/main/test3", method="post")
     input(type="text", name="test", value="test?")
     input(type="submit", value="api/main post!!")
+
+  br
+  a(href="http://localhost:3000/dummy") dummy로 이동
